syntax = "proto3";

package service;

import "mostpopular.proto";

message MostPopularRequest {
    string resourceType = 1;
    string section = 2;
    uint32 timePeriodDays = 3;
}

message MostPopularResponse {
    repeated nyt.MostPopularResult result = 1;
}

service NYTProxyService {
    rpc GetMostPopular(MostPopularRequest) returns (MostPopularResponse);
}
